// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link tests on Web Link doesnt change inner text styles 1`] = `
<a
  href="http://thetimes.co.uk"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <p>
    Hello
  </p>
</a>
`;

exports[`Link tests on Web Link renders correctly 1`] = `
<a
  href="http://thetimes.co.uk"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  The Times
</a>
`;

exports[`Link tests on Web TextLink renders correctly with children 1`] = `
<a
  dir="auto"
  href="http://thetimes.co.uk"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
>
  The Times
</a>
`;

exports[`Link tests on Web TextLink renders correctly with multiple styles 1`] = `
<a
  dir="auto"
  href="http://thetimes.co.uk"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
>
  The Times
</a>
`;

exports[`Link tests on Web TextLink renders correctly with specific styles 1`] = `
<a
  dir="auto"
  href="http://thetimes.co.uk"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  The Times
</a>
`;

exports[`Link tests on Web renders with a target 1`] = `
<a
  href="http://thetimes.co.uk"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
  target="_blank"
>
  The Times
</a>
`;

exports[`Link tests on Web renders with responsive styles 1`] = `
.c0 {
  color: #006699;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
}

@media (min-width:768px) {
  .c0 {
    font-size: 18px;
    line-height: 30px;
  }
}

<a
  class="c0"
  href="http://thetimes.co.uk"
  style="text-decoration: underline;"
>
  The Times
</a>
`;
